--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam ut nulla officia quo magni voluptas dolorum enim animi impedit tempora sequi, eligendi hic amet inventore nesciunt provident sunt dignissimos exercitationem.</p>
-    <a href="index.html">Ke Index -></a>
+    <a href="/.index">Ke Index -></a>
 </body>
 </html>
