--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello!</h1>
-    <a href="/.about">Ke About -></a>
+    <a href="./about">Ke About -></a>
 </body>
 </html>
